After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 787508 - Application crashes when closing empty notes
Application crashes when closing empty notes
Status: RESOLVED FIXED
Product: bijiben
Classification: Applications
Component: Edition
3.24.x
Other Linux
: Normal normal
: ---
Assigned To: Bijiben maintainer(s)
Bijiben maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2017-09-10 15:40 UTC by Isaque Galdino
Modified: 2017-09-11 02:19 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
main-view: Crash when closing app with empty note (1.67 KB, patch)
2017-09-10 15:47 UTC, Isaque Galdino
none Details | Review
main-view: Crash when closing app with empty note (1.67 KB, patch)
2017-09-10 15:50 UTC, Isaque Galdino
none Details | Review
main-view: Crash when closing app with empty note (1.68 KB, patch)
2017-09-10 15:52 UTC, Isaque Galdino
none Details | Review
main-view: Crash when closing app with empty note (1.70 KB, patch)
2017-09-11 02:07 UTC, Isaque Galdino
none Details | Review
main-view: Crash when closing app with empty note (1.70 KB, patch)
2017-09-11 02:19 UTC, Isaque Galdino
none Details | Review

Description Isaque Galdino 2017-09-10 15:40:36 UTC
Application is crashing when creating a new note and, without adding anything, it's closed.
Comment 1 Isaque Galdino 2017-09-10 15:47:49 UTC
Created attachment 359464 [details] [review]
main-view: Crash when closing app with empty note

Application is crashing when closing it in an empty note.

When application is closed, it's raised an item-delete action. The
item-delete process tries to get back to main view, but view are now
destroyed, so it reaches a NULL pointer.

This patch checks if view is NULL and then returns without further
processing.
Comment 2 Isaque Galdino 2017-09-10 15:50:45 UTC
Created attachment 359465 [details] [review]
main-view: Crash when closing app with empty note

Application is crashing when closing it in an empty note.

When application is closed, it's raised an item-delete action. The
item-delete process tries to get back to main view, but view are now
destroyed, so it reaches a NULL pointer.

This patch checks if view is NULL and then returns without further
processing.
Comment 3 Isaque Galdino 2017-09-10 15:52:11 UTC
Created attachment 359466 [details] [review]
main-view: Crash when closing app with empty note

Application is crashing when closing it in an empty note.

When application is closed, it's raised an item-delete action. The
item-delete process tries to get back to main view, but view are now
destroyed, so it reaches a NULL pointer.

This patch checks if view is NULL and then returns without further
processing.
Comment 4 Isaque Galdino 2017-09-10 15:52:57 UTC
Review of attachment 359466 [details] [review]:

Pushed to master.
Comment 5 Isaque Galdino 2017-09-11 02:07:20 UTC
Created attachment 359487 [details] [review]
main-view: Crash when closing app with empty note

Application is crashing when closing it in an empty note.

When application is closed, it's raised an item-delete action. The
item-delete process tries to get back to main view, but view are now
destroyed, so it reaches a NULL pointer.

This patch checks if view is NULL and then returns without further
processing.
Comment 6 Isaque Galdino 2017-09-11 02:19:53 UTC
Created attachment 359489 [details] [review]
main-view: Crash when closing app with empty note

Application is crashing when closing it in an empty note.

When application is closed, it's raised an item-delete action. The
item-delete process tries to get back to main view, but view are now
destroyed, so it reaches a NULL pointer.

This patch checks if view is NULL and then returns without further
processing.